# LinesOfCode

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Include/: Counter.hpp  Result.hpp
Source/: Counter.cpp  Main.cpp  Result.cpp
include/: counter.hh
src/: counter.cc  main.cc
